[project]
name = "comfyui-trackandwheel"
description = "A ComfyUI extension that improves panning and zooming on trackpads and with the mouse wheel"
version = "1.0.0"
license = {file = "LICENSE"}
requires-python = ">= 3.8"
authors = [
    {name = "Gremlation", email = "gremlation@proton.me"},
]
maintainers = [
    {name = "Gremlation", email = "gremlation@proton.me"},
]
readme = "README.md"
keywords = ["ComfyUI"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Repository = "https://github.com/gremlation/ComfyUI-TrackAndWheel"

[tool.comfy]
PublisherId = "gremlation"
DisplayName = "ComfyUI-TrackAndWheel"
